feat: add role and user api
